# spice-gm

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CHANGELOG.md  Makefile.am  README  README.Windows.md  cfg.mk  configure.ac  doxygen.cfg  doxygen.sh  meson.build  meson_options.txt  spice-server.pc.in
build-aux/: meson-dist
docs/: Makefile.am  how_to_release.md  meson.build  spice_for_newbies.txt  spice_protocol.txt  spice_style.txt  spice_threading_model.txt  vd_interfaces.txt
docs/manual/: Makefile.am  manual.txt
m4/: spice-compile-warnings.m4
server/: Makefile.am  agent-msg-filter.c  agent-msg-filter.h  cache-item.h  cache-item.tmpl.c  cache-item.tmpl.cpp  char-device.c  char-device.cpp  char-device.h  common-graphics-channel.c  common-graphics-channel.cpp  common-graphics-channel.h  cursor-channel-client.c  cursor-channel-client.cpp  cursor-channel-client.h  cursor-channel.c  cursor-channel.cpp  cursor-channel.h  dcc-private.h  dcc-send.c  dcc-send.cpp  dcc.c  dcc.cpp  dcc.h  dispatcher.c  dispatcher.cpp  dispatcher.h  display-channel-private.h  display-channel.c  display-channel.cpp  display-channel.h  display-limits.h  event-loop.c  glib-compat.h  glz-encode-match.tmpl.c  glz-encode.tmpl.c  glz-encoder-dict.c  glz-encoder-dict.h  glz-encoder-priv.h  glz-encoder.c  (+127 more)
server/tests/: .gitignore  Makefile.am  autobahn-check-report  basic-event-loop.c  basic-event-loop.h  fuzzingclient.json  meson.build  regression-test.py  replay.c  stat-test.c  test-channel.c  test-channel.cpp  test-codecs-parsing.c  test-dispatcher.cpp  test-display-base.c  test-display-base.cpp  test-display-base.h  test-display-no-ssl.c  test-display-resolution-changes.c  test-display-streaming.c  test-display-width-stride.c  test-glib-compat.h  test-gst.c  test-gst.cpp  test-leaks.c  test-listen.c  test-loop.c  test-playback.c  test-qxl-parsing.c  test-qxl-parsing.cpp  test-record.c  test-sasl.c  test-set-ticket.c  test-smartcard.c  test-smartcard.cpp  test-stream-device.c  test-stream-device.cpp  test-stream.c  test-two-servers.c  test-vdagent.c  (+6 more)
server/tests/pki/: ca-cert.pem  server-cert.pem  server-key.pem
server/tests/valgrind/: glib.supp  spice.supp
tests/: migrate.py
tools/: Makefile.am  meson.build  reds_stat.c
